--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -1,8 +1,7 @@
-    * { margin: 0; padding: 0; }
+ * { margin: 0; padding: 0; }
 
-    body {
-        font-family: 'Montserrat', sans-serif;
-        margin: 0px;
+body {
+    font-family: 'Montserrat', sans-serif;
         background-color: #eee;
     }
 
@@ -19,7 +18,6 @@
         height: 28px;
         box-sizing: border-box;
         transition: all 0.2s;
-        border-bottom: solid 1px rgba(255, 255, 255, 0.205);
         align-items: center;
         justify-content: space-around;
     }
@@ -32,9 +30,9 @@
     section.overheader > ul li {
         display: inline;
         opacity: 76%;
+        transition: all 0.2s;
     }
 
-    
     .overheader ul li {
         list-style: none;
     }
@@ -58,11 +56,9 @@
         margin: 4px;
     }
 
-    .overheader ul li h2 {margin: 0;}
+    .overheader ul li h2 { margin: 0; }
 
-    .overheader ul li:hover {
-        opacity: 100%;
-    }
+    .overheader ul li:hover { opacity: 100%; }
 
     .country-selection {
         height: 16px
@@ -79,14 +75,23 @@
         transform: scale(1.1);
     }
 
+    #divider-overheader {
+        width: 100%;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.267);
+        border: none;
+    }
+
     /*-----------------  Header-center:  -------------------*/
 
+
     .header-center {
-        height: 105px;
+        height: 7rem;
         display: flex;
         width: 100%;
         justify-content: space-between;
         align-items: center;
+
     }
 
     .header-center div {
@@ -94,6 +99,8 @@
         text-align: center;
         align-items: center;
         justify-content: space-between;
+        margin-right: 3rem;
+        margin-left: 3rem;
     }
 
 
@@ -108,10 +115,10 @@
     }
 
     #title-logo {
-        font-size: 30px;
+        font-size: 1.75em;
         text-align: center;
         color: white;
-        padding-left: 10px;
+        padding-left: 12px;
         font-family: 'Montserrat', sans-serif;
         font-weight: 500;
     }
@@ -142,7 +149,7 @@
         padding-left: 15px;
         padding-right: 6px;
         font-size: 19px;
-        width: 400px;
+        width: 22vw;
         border: none;
         outline: 0;
         text-align: left;
@@ -161,16 +168,15 @@
         padding-top: 3px;
     }
 
-    ul.menu {padding-left: 0px}
-
     .header-options {
         justify-self: flex-end; 
         display: flex;
     }
 
-    .header-options div {
+    /* .header-options div {
         margin-top: 0px;
-        margin-left: 20px;}
+        margin-left: 20px;
+    } */
 
     .header-options a {
         color: white;
@@ -182,7 +188,9 @@
     .menu {
         list-style: none;
         display: flex;
-        padding-bottom: 11px;
+        align-items: center;
+        padding-bottom: 1em;
+        gap: 2em;
     }
 
     .menu li {
@@ -195,10 +203,10 @@
         color: white;
         text-decoration: none;
         padding: 5px 10px;
+        font-size: 15px;
     }
 
     .menu li:hover {
-        /* position: relative; */
         background-color: none;
         border-radius: 10px;
         background: none;
@@ -213,19 +221,18 @@
         color: white;
     }
 
-    .menu li  ul{
+    /* .menu li  ul{
         position:absolute; 
         top:25px; 
         left:0;
         background-color:#fff; 
         display:none;
-    }  
+    }   */
 
     .menu li:hover ul, .menu li.over ul {display:block;}
 
     #suport {
-        position: relative;
-        font-size: 16px;
+        font-size: 15px;
         display: inline-block;
         align-items: center;
         padding: 9px 2px 10px 2px;
@@ -233,24 +240,13 @@
     }
 
     #login {
-        position: relative;
-        left: 27px;
-        font-size: 15.8px;
+        font-size: 15px;
         padding: 0px 2px 2px 2px;
-        margin-top: 10px;
     }
 
     .header-options ul li img {
         width: 26px;
-        float: left;
         padding-left: 5px;
-    }
-
-    #icone-suporte {
-        padding-top: 2px;
-    }
-    #icone-login {
-        padding-top: 10px;
     }
 
     .shopping-cart {
@@ -297,7 +293,7 @@
     .settings ul li img:hover {
         transform: scale(1.1);
     }
-    hr#divisoria {
+    hr#divider-to-categories {
         width: 100%;
         height: 4px;
         background-color: #fad11b;
@@ -309,13 +305,13 @@
 
     /*-----------------  Categorias:  -------------------*/
 
-    .categorias ul {
+    .categories ul {
         margin: 0;
         padding: 0;
         display: flex;
     }
 
-    .categorias ul li {
+    .categories ul li {
         background-color: #1a1a1a   ;
         list-style: none;
         width: 100%;
@@ -328,14 +324,13 @@
         
     }
 
-    .categorias ul li a {
+    .categories ul li a {
         color: white;
         text-decoration: none;
         text-transform: uppercase;
     }
 
-
-    .categorias ul li:hover {
+    .categories ul li:hover {
         background-color: #fad11b;
         color: black;
         -moz-transition: all 0.4s;
@@ -344,35 +339,35 @@
         font-size: 16.4px;
     }
 
-    .categorias ul li:hover > a {
+    .categories ul li:hover > a {
         color: black;
     }
 
 
-    .categorias ul ul {
+    .categories ul ul {
         flex-direction: column;
         display: none;
     }
 
-    .categorias ul li:hover > ul {
+    .categories ul li:hover > ul {
         display: block;
     }
 
-    .categorias ul ul li {
+    .categories ul ul li {
         font-size: 15px;
         width: 100%;
         position: relative;
         z-index: 1;
     }
 
-    .categorias ul ul li:hover {
+    .categories ul ul li:hover {
         transition: .4s;
         background-color: #fad11b;
         font-size: 14.3px;
         text-align: center;
     }
 
-    .categorias {
+    .categories {
         box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.247);
     }
 
@@ -452,25 +447,24 @@
     /*-------------  Carrossel de imagens:  -------------*/
 
     .container-carousel {
-        width: 100%;
         display: flex;
         justify-content: center;
+        width: 100%;
     }
 
     .carousel {
-        width: 1500px;
-        height: 270px;
+        width: 90rem;
+        height: 17rem;
         overflow: hidden;
         border-radius: 10px;
         transition: all 0.4s;
-        margin: 32px;
-        margin-left: 47px;
+        margin: 3rem;
         border: solid 2px #1a1a1a;
         position: relative;
     }
 
     .slides {
-        width: 7600px;
+        width: 500rem;
         display: flex;
         position: relative;
     }
@@ -478,19 +472,20 @@
     .slides a {cursor: initial;}
 
     .image img {
-        width: 1500px;
-        height: 270px;
+        width: 90rem;
+        height: 17rem;
     }
     #atual {
         transition: all 0.5s;
     }
 
     .btn {
+        display: flex;
         position: absolute;
+        top: 3.4em;
         color: white;
         padding: 20px;
         text-align: center;
-        display: flex;
         align-items: center;
         justify-content: center;
         cursor: pointer;
@@ -506,39 +501,33 @@
         transform: scale(1.2);
         color: #1a1a1a;
         background: #e6cd5f; 
-    
     }
 
     #back {
-        top: 120px;
         border-top-right-radius: 7px;
         border-bottom-right-radius: 7px;
     }
     #next {
-        top: 120px;
-        left: 19.15%;
         border-top-left-radius: 7px;
         border-bottom-left-radius: 7px;
-
+        left: 39.6em;
     }
 
     .balls {
         position: absolute;
         display: flex;
         justify-content: center;
-        /* border-radius: 15px; */
-        /* top: 15px;
-        left: 9.4%; */
-        width: 1500px;
-        margin-top: -260px
+        /* width: 90rem; */
+        margin-top: 1em;
+        margin-left: 1em;
     }
 
     .balls div {
         transition: all 0.4s;
-        border: solid 3px rgb(200, 200, 200);
+        border: solid 3px #eee;
         padding: 3px;
         border-radius: 50%;
-        margin-right: 10px;
+        margin-left: 8px;
         cursor: pointer;
     }
 
@@ -550,6 +539,9 @@
     }
 
     .imgAtual {
-        background: rgb(200, 200, 200);
+        background: #eee;
         transition: all 0.3s;
     }
+
+
+    .teste-scroll {margin: 3rem; text-align: justify;}
