--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -129,17 +129,7 @@ body {
         align-items: center;
     }
 
-    /* .search {
-        position: relative;
-        top: 1px;
-        margin: 0px;
-        margin-bottom: 4px;
-    } */
-
     .search div {
-        /* display: flex;
-        width: 100%;
-        margin: 10px; */
         background-color: white;
         border-radius: 10px;
         height: 43px;
@@ -148,8 +138,8 @@ body {
     .search input {
         padding-left: 15px;
         padding-right: 6px;
-        font-size: 19px;
-        width: 22vw;
+        font-size: 16px;
+        width: 25vw;
         border: none;
         outline: 0;
         text-align: left;
@@ -168,85 +158,35 @@ body {
         padding-top: 3px;
     }
 
-    .header-options {
-        justify-self: flex-end; 
-        display: flex;
+    div.header-options {
+        margin-left: 0px;
+        margin-right: 0px;
     }
 
-    /* .header-options div {
-        margin-top: 0px;
-        margin-left: 20px;
-    } */
+    .header-options nav {
+        display: inline-flex;
+        align-items: center;
+    }
+
+    .header-options img {width: 1.7em;}
 
     .header-options a {
-        color: white;
+        color: #eee;
         text-decoration: none;
-        cursor: pointer;
-        display: inline-flex;
+        white-space: nowrap;
+        font-size: 1em;
     }
 
-    .menu {
-        list-style: none;
-        display: flex;
-        align-items: center;
-        padding-bottom: 1em;
-        gap: 2em;
+    .header-options nav div {gap: 0.7em;}
+
+    div.client-support {
+        margin-left: 40px;
+        margin-right: 10px;
     }
 
-    .menu li {
-        cursor: pointer;
-        border-radius: 10px;
-        border: none;
-    }
-
-    .menu li a {
-        color: white;
-        text-decoration: none;
-        padding: 5px 10px;
-        font-size: 15px;
-    }
-
-    .menu li:hover {
-        background-color: none;
-        border-radius: 10px;
-        background: none;
-        /* border: solid 1px #fad11b; */
-        box-shadow:0 3px 10px 0 #fcd528e7; 
-        -moz-transition: all 0.3s;
-        -webkit-transition: all 0.3s;
-        transition: all 0.3s;
-    }
-
-    .header-options ul li a:hover {
-        color: white;
-    }
-
-    /* .menu li  ul{
-        position:absolute; 
-        top:25px; 
-        left:0;
-        background-color:#fff; 
-        display:none;
-    }   */
-
-    .menu li:hover ul, .menu li.over ul {display:block;}
-
-    #suport {
-        font-size: 15px;
-        display: inline-block;
-        align-items: center;
-        padding: 9px 2px 10px 2px;
-        margin-top: 11px;
-    }
-
-    #login {
-        font-size: 15px;
-        padding: 0px 2px 2px 2px;
-    }
-
-    .header-options ul li img {
-        width: 26px;
-        padding-left: 5px;
+    div.login-signup {
+        margin-left: 40px;
+        margin-right: 40px;
     }
 
     .shopping-cart {
