--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -606,50 +606,105 @@ div.security {
     border-radius: 5px;
  }
 
-.slider-promotions-container {
+.promotions-container {
     margin: 35px 0px 35px 0px;
     padding: 0;
     width: 100%;
-    height: 20rem;
+    height: 28rem;
     display: flex;
     align-items: center;
-    overflow: hidden;
+    justify-content: center;
     background-color: #1a1a1a;
     border-top: solid 5px #c2a420;
     border-bottom: solid 5px #c2a420;
 }
 
-.image-slider {
-    width: 100%;
-    position: absolute;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    transition: 0.5s;
-}
+.cards-promotions-div {display: flex}
 
-.slides-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.cards-promotions{
     margin: 0px 30px 0px 30px;
-    transition: .7s;
-    -webkit-transition: .7s;
-    -moz-transition: .7s;
+    position: relative;
+    height: 25em;
+    align-items: center;
+    justify-content: space-around;
+    display: flex;
+    gap: 3rem;
+    text-align: center;
 }
 
 .promotions-img {
-    position: relative;
-    width: auto;
-    height: 230px;
-    transition: 0.5s;
-    border-radius: 10px;
+    width: 100%;
+    height: 15em;
 }
 
-.slides-div:hover {
+.card-promotion {
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 4px;
+    background-color: #eee;
+    border: solid 3px #c2a420;
+    border-radius: 10px;
+    width: 14rem;
+}
+
+.card-promotion:hover {
+    border: solid 3px #189107;
+    transition: .5s;
+}
+
+.title-card-promotion {
+    font-size: 14px;
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: default;
+    font-weight: bold;
+}
+
+.oldPrice-card {
+    color: #9c2222be;
+    font-weight: bold;
+    font-size: 11px;
+    text-decoration: line-through;
+}
+
+.price-card-promotions {cursor: default;}
+
+.priceUpdate-card {
+    font-size: 11px;
+    padding-bottom: 2px;
+}
+
+.currentPrice-card {
+    font-size: 22px;
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+
+.buy-btn {
+    display: flex;
+    background: #189107;
+    border: none;
+    border-radius: 20px;
+    width: 80%;
+    height: 30px;
+    align-items: center;
+    justify-content: center;
+    transition: .5s;
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    margin-bottom: 4px;
+}
+
+.buy-btn:hover {
     transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
-
 }
 
