--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -623,7 +623,6 @@ div.security {
 
 .cards-promotions{
     margin: 0px 30px 0px 30px;
-    position: relative;
     height: 25em;
     align-items: center;
     justify-content: space-around;
@@ -647,6 +646,7 @@ div.security {
     border: solid 3px #c2a420;
     border-radius: 10px;
     width: 14rem;
+    position: relative;
 }
 
 .card-promotion:hover {
@@ -708,3 +708,26 @@ div.security {
     -moz-transform: scale(1.1);
 }
 
+.discount-card {
+    display: none;
+    gap: 4px;
+    background-color: #189107;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    position: absolute;
+    width: 18%;
+    padding: 7px;
+    border-bottom-left-radius: 10px;
+    border-top-left-radius: 10px;
+    align-items: center;
+    justify-content:start;
+    right: 0;
+    bottom: 5.5em;
+}
+
+.discount-card img {width: 15px;}
+
+.card-promotion:hover > .discount-card {
+    display: flex;
+}
