color btn promotions

--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -761,9 +761,11 @@ div.security {
 #btn-left-promotions {
     position: absolute;
     left: 20px;
+    color: #e2bf23;
 }
 
 #btn-next-promotions {
     position: absolute;
     right: 20px;
+    color: #e2bf23;
 }
