--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -573,19 +573,19 @@ div.security {
     padding-bottom: 3rem;
  }
 
- /* ----------------- Super promoções ------------------*/
+ /* ----------------- title das sections ------------------*/
 
- .title-super-promotions {
+ .title-sections {
     margin-left: 4rem;
     margin-right: 4rem;
  }
 
- .title-super-promotions span {
+ .title-sections span {
     font-weight: bold;
     text-transform: uppercase;
  }
 
- .title-super-promotions span::after{
+ .title-sections span::after{
      content: '';
      display: block;
      height: 4px;
@@ -595,7 +595,7 @@ div.security {
      border-radius: 5px;
  }
 
- .title-super-promotions::after {
+ .title-sections::after {
     content: '';
     display: block;
     height: 1px;
@@ -606,6 +606,8 @@ div.security {
     bottom: 2px;
     border-radius: 5px;
  }
+
+  /* ----------------- Super promoções ------------------*/
 
 .cards-promotions-container {
     margin: 35px 0px 35px 0px;
@@ -773,3 +775,43 @@ div.security {
 }
 
 #btn-next-promotions:hover {color: #c2a420}
+
+
+ /* ----------------- Jogos mais populares ------------------*/
+
+ .populares-grid-container {
+    display: grid;
+    justify-content: space-around;
+    grid-template-columns: auto auto auto auto auto;
+    padding: 1rem 3rem 1rem 3rem;
+ }
+
+.populares-grid-item {
+    padding: 20px;
+    text-align: center;
+    transition: all .7s;
+}
+
+.populares-grid-item:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+}
+
+.populares-grid-item img {
+    border-radius: 13px;
+    width: auto;
+    height: 16ch;
+}
+
+.populares-grid-item a {
+    text-decoration: none;
+    color: black;
+}
+
+.populares-grid-item p {
+    padding-top: 3px;
+    font-size: 15px;
+    font-weight: 200px;
+}
+  
