--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -814,4 +814,49 @@ div.security {
     font-size: 15px;
     font-weight: 200px;
 }
-  
+
+ /* ----------------- Lançamentos ------------------*/
+
+.lancamentos {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+
+.banner-lancamento {
+    margin: 35px 0px 35px 0px;
+    position: relative;
+}
+
+.banner-lancamento img {
+    width: 100%;
+    height: 40ch;
+}
+
+.banner-lancamento a {
+    text-decoration: none;
+    color: white;
+    font-size: 20px;
+    font-weight: 300px;
+}
+
+.banner-lancamento span {
+    background: #189107;
+    width: 13%;
+    height: auto;
+    padding: 15px;
+    border-radius: 20px;
+    text-align: center;
+    position: absolute;
+    bottom: 40px;
+    right: 50px;
+    transition: all .7s;
+}
+
+.banner-lancamento span:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+}
