--- a/css/styles-index.css
+++ b/css/styles-index.css
@@ -20,14 +20,14 @@ section.overheader {
     transition: all 0.2s;
     align-items: center;
     gap: 3rem;
-    border-bottom: solid 1px rgba(255, 255, 255, 0.315);
+    border-bottom: solid 1px rgba(255, 255, 255, 0.219);
 
 }
 
 .overheader div {
     display: flex;
     justify-content: center;
-    margin: 5px 0px 5px 0px;
+    margin: 4px 0px 4px 0px;
     padding: 0;
 }
 
@@ -241,12 +241,20 @@ div.shopping-cart {
     margin: 1rem;
     margin-right: 3rem;
     text-align: center;
+    transition: all .4s;
+    cursor: pointer;
 }
 
 .shopping-cart img {
     width: auto;
     height: 35px;
     width: auto;
+}
+
+.shopping-cart:hover {
+    transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
 }
 
 @media (max-width: 1075px) {
